@@ -1,10 +1,9 @@
 package art.galushko.gitlab.mrconflict.formatter;
 
 import art.galushko.gitlab.mrconflict.model.MergeRequestConflict;
-import art.galushko.gitlab.mrconflict.model.MergeRequestInfo;
 import lombok.extern.slf4j.Slf4j;
+import org.gitlab4j.api.models.MergeRequest;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -39,39 +38,67 @@ public class DefaultConflictFormatter implements ConflictFormatter {
     }
 
     @Override
-    public String formatConflictNote(List<MergeRequestConflict> conflicts, Long mergeRequestIid) {
-        StringBuilder note = new StringBuilder();
+    public String formatConflictNote(List<MergeRequestConflict> conflicts, Long mergeRequestIid, List<MergeRequest> resolvedConflictMrs) {
+        var note = new StringBuilder();
         note.append("## Merge Request Conflict Analysis\n\n");
+
+        appendInfoAboutResolvedConflicts(resolvedConflictMrs, note);
+
+        if (conflicts.isEmpty()) {
+            return note.append("No more conflicts detected. All conflicts are resolved!\n").toString();
+        }
+
         note.append("This merge request has conflicts with the following merge requests:\n\n");
 
-        for (MergeRequestConflict conflict : conflicts) {
-            MergeRequestInfo otherMr = conflict.firstMr().id() == mergeRequestIid ?
-                    conflict.secondMr() : conflict.firstMr();
-
-            note.append("### Conflict with MR !").append(otherMr.id())
-                    .append(" (").append(otherMr.title()).append(")\n");
-            note.append("- **Source branch:** ").append(otherMr.sourceBranch()).append("\n");
-            note.append("- **Target branch:** ").append(otherMr.targetBranch()).append("\n");
-            note.append("- **Conflict reason:** ").append(conflict.reason()).append("\n");
-            note.append("- **Conflicting files:** ").append(conflict.conflictingFiles().size()).append("\n");
-
-            // List conflicting files (limit to MAX_FILES_IN_NOTE to avoid huge comments)
-            int fileLimit = Math.min(conflict.conflictingFiles().size(), MAX_FILES_IN_NOTE);
-            List<String> filesList = new ArrayList<>(conflict.conflictingFiles());
-            for (int i = 0; i < fileLimit; i++) {
-                note.append("  - `").append(filesList.get(i)).append("`\n");
-            }
-
-            if (conflict.conflictingFiles().size() > fileLimit) {
-                note.append("  - ... and ").append(conflict.conflictingFiles().size() - fileLimit)
-                        .append(" more files\n");
-            }
-
-            note.append("\n");
-        }
+        conflicts.forEach(conflict ->
+                appendMergeRequestConflictInfo(mergeRequestIid, conflict, note)
+        );
 
         note.append("Please resolve these conflicts before merging.\n");
         return note.toString();
+    }
+
+    private void appendInfoAboutResolvedConflicts(List<MergeRequest> resolvedConflictMrs, StringBuilder note) {
+        if (resolvedConflictMrs.isEmpty()) {
+            return;
+        }
+        note.append("#### Resolved conflicts\n\n");
+        resolvedConflictMrs.forEach(resolvedMr -> {
+            note.append("- **Conflict with MR !").append(resolvedMr.getIid())
+                    .append(" (").append(resolvedMr.getTitle()).append(")** due to ");
+            switch (resolvedMr.getState()) {
+                case "merged" -> note.append("merge. Please check merge request to verify changes.\n");
+                case "closed" -> note.append("close. Changes were declined.\n");
+                case "opened" -> note.append("open. No more conflicts detected.\n");
+                default -> log.error("Unknown MR {} state: {}", resolvedMr.getIid(), resolvedMr.getState());
+            }
+        });
+        note.append("\n\n");
+    }
+
+    private void appendMergeRequestConflictInfo(Long mergeRequestIid, MergeRequestConflict conflict, StringBuilder note) {
+        var otherMr = conflict.firstMr().id() == mergeRequestIid ?
+                conflict.secondMr() : conflict.firstMr();
+
+        note.append("### Conflict with MR !").append(otherMr.id())
+                .append(" (").append(otherMr.title()).append(")\n");
+        note.append("- **Source branch:** ").append(otherMr.sourceBranch()).append("\n");
+        note.append("- **Target branch:** ").append(otherMr.targetBranch()).append("\n");
+        note.append("- **Conflict reason:** ").append(conflict.reason()).append("\n");
+        note.append("- **Conflicting files:** ").append(conflict.conflictingFiles().size()).append("\n");
+
+        // List conflicting files (limit to MAX_FILES_IN_NOTE to avoid huge comments)
+        int fileLimit = Math.min(conflict.conflictingFiles().size(), MAX_FILES_IN_NOTE);
+        conflict.conflictingFiles().stream().limit(fileLimit)
+                .forEach(file -> note.append("  - `").append(file).append("`\n"));
+
+        if (conflict.conflictingFiles().size() > fileLimit) {
+            note.append("  - ... and ")
+                    .append(conflict.conflictingFiles().size() - fileLimit)
+                    .append(" more files\n");
+        }
+
+        note.append("\n");
     }
 
     /**
@@ -90,7 +117,7 @@ public class DefaultConflictFormatter implements ConflictFormatter {
                     conflictingFiles.size(),
                     String.join(", ", conflictingFiles.stream()
                             .map(f -> "`" + f + "`")
-                            .collect(Collectors.toList())));
+                            .toList()));
         }
     }
 
